Fix xs playground output from overflowing on mobile

--- a/Cwel.Docs.Web/Assets/scss/_content-area.scss
+++ b/Cwel.Docs.Web/Assets/scss/_content-area.scss
@@ -15,6 +15,8 @@
 }
 .content-area__container--output {
     margin-bottom: -40px; // collapses docs playground container padding
+    padding-left: 0;
+    padding-right: 0;
     border: none;
     border-top-width: 1px;
     border-top-style: solid;
